# cossack-quest

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CossackQuest  CppProperties.json  Game.cpp  Game.h  GameManager.cpp  GameManager.h  Haunted-Pyramid.sln  README.md  cmake_install.cmake  main.cpp
Cossack-Quest/: Enemy.cpp  Enemy.hpp  Game.cpp  Game.h  Game.hpp  GameManager.cpp  GameManager.h  GameManager.hpp  GameObject.cpp  GameObject.hpp  Globals.h  Globals.hpp  Levels.hpp  Player.cpp  Player.hpp  PlayerControl.cpp  PlayerControl.hpp  SoundManager.cpp  SoundManager.h  Weapon.hpp  main.cpp  matrix.h  util.h
Cossack-Quest/assets/: cultist_mage.glb
Cossack-Quest/cmake/: CMakeLists.txt
Cossack-Quest/shaders/: rlights.h
Cossack-Quest/shaders/glsl/: fog.fs
Haunted-Pyramid/: Game.cpp  Game.h  GameManager.cpp  GameManager.h  Globals.h  Haunted-Pyramid.vcxproj  Haunted-Pyramid.vcxproj.filters  main.cpp  packages.config
Launcher/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs
